compiler/typ/tests/fixtures/diagnostics/0384_labels_wrong_y_type_08.ml.infer.expected
File "0384_labels_wrong_y_type_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0384_labels_wrong_y_type_08 is not a valid module name.

File "0384_labels_wrong_y_type_08.ml", line 2, characters 27-28:
2 | let _ = pick_theta ~x:7 ~y:8
                               ^
Error: The constant 8 has type int but an expression was expected of type
         bool
